--- a/app/index.html
+++ b/app/index.html
@@ -5,28 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dicta dolor consequuntur eligendi magnam
-        assumenda, eveniet nisi quaerat sequi maiores eos atque facere, reiciendis eius suscipit adipisci voluptatem,
-        ducimus neque.</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum atque sint dolores beatae illo maxime
-        dignissimos soluta, earum quibusdam quas obcaecati vel, et culpa recusandae, assumenda in deleniti commodi
-        corrupti.
-        Officiis quaerat architecto natus, rerum facilis dicta ratione laudantium, laboriosam dolore velit itaque modi!
-        Saepe ipsa repellat animi dolore veniam neque minima magnam nihil voluptatibus! Doloremque voluptatem unde
-        quibusdam sit.
-        Assumenda ab expedita necessitatibus odio accusamus commodi odit iste exercitationem magni quae? Odit, maxime
-        facilis, incidunt in impedit ab harum unde fugit, doloribus modi magnam est aliquid aperiam vero maiores?
-        Eveniet minus exercitationem, facere laboriosam, labore eos, harum earum expedita quos quia dicta consequatur
-        vel excepturi asperiores animi ea odit cupiditate rem minima dolorem modi? Eligendi repellendus odio ipsa
-        soluta.
-        Illo reprehenderit ad sint soluta magnam maxime numquam libero exercitationem ipsa. Voluptas magni, nesciunt
-        doloribus possimus, voluptatem consectetur, blanditiis dolorem ipsa laboriosam ratione hic a saepe temporibus?
-        Fuga, voluptatibus vitae.</p>
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a href="#"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="header__text">
+                        <a href="#">
+                            <span>Need help?</span>
+                        </a>
+                        Talk to an expert:
+                        <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="header__box ">
+                        <a class="basket" href="#"></a>
+                        <a class="header__btn header__btn-login" href="#">Login</a>
+                        <a class="header__btn header__btn-register" href="#">Register</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__menu">
+            <div class="container">
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">WordPress</a></li>
+                        <li><a href="#">Joomla</a></li>
+                        <li><a href="#">PSD</a></li>
+                        <li><a href="#">Plugins</a></li>
+                        <li><a href="#">Components</a></li>
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+    </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/main.libs.js"></script>
     <script src="js/main.min.js"></script>
