--- a/app/new-items.html
+++ b/app/new-items.html
@@ -125,7 +125,6 @@
                                                 <a class="product__item-category" href="#">
                                                     Site Template
                                                 </a>
-
                                             </div>
                                             <div class="product__item-price">
                                                 $19
@@ -216,7 +215,8 @@
                         <div class="product-page__content">
                             <div class="product-page__filter">
                                 <div class="product-page__filter-sort">
-                                    <button class="icon-sort-amount-desc"></button>Sort by: New Items<button class="icon-unsorted"></button>
+                                    <button class="icon-sort-amount-desc"></button>Sort by: New Items<button
+                                        class="icon-unsorted"></button>
                                 </div>
                                 <div>
                                     <button class="icon-th-large active"></button>
@@ -235,10 +235,13 @@
                                             <a class="product__item-category" href="#">
                                                 Site Template
                                             </a>
-
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
                                         </div>
                                         <div class="product__item-price">
                                             $19
+                                            <span>Sales ( 14 ) </span>
                                         </div>
                                     </div>
                                     <div class="product__item-info">
@@ -251,6 +254,10 @@
                                             <div class="rate-star"></div>
                                             (<span>05</span>)
                                         </div>
+                                        <div class="product__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div> 
                                     </div>
                                 </div>
 
@@ -265,10 +272,13 @@
                                             <a class="product__item-category" href="#">
                                                 Site Template
                                             </a>
-
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
                                         </div>
                                         <div class="product__item-price">
                                             $19
+                                            <span>Sales ( 14 ) </span>
                                         </div>
                                     </div>
                                     <div class="product__item-info">
@@ -281,6 +291,10 @@
                                             <div class="rate-star"></div>
                                             (<span>05</span>)
                                         </div>
+                                        <div class="product__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div> 
                                     </div>
                                 </div>
 
@@ -295,10 +309,13 @@
                                             <a class="product__item-category" href="#">
                                                 Site Template
                                             </a>
-
+                                            <div class="product__item-text">
+                                                Pimply dummy text of the printing and typesetting industry.
+                                            </div>
                                         </div>
                                         <div class="product__item-price">
                                             $19
+                                            <span>Sales ( 14 ) </span>
                                         </div>
                                     </div>
                                     <div class="product__item-info">
@@ -311,8 +328,13 @@
                                             <div class="rate-star"></div>
                                             (<span>05</span>)
                                         </div>
+                                        <div class="product__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
+                                        </div> 
                                     </div>
                                 </div>
+
                             </div>
                             <div class="pagination">
                                 <ul class="pagination__list">
