--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
                                 <a class="header__phone" href="tel:61383766284">+61 3 8376 6284</a>
                             </div>
                             <div class="header__box ">
-                                <div class="notification__box">
+                                <div class="notification__box header__btn-login--off">
                                     <a class="notification header__circle active icon-bell-o"
                                         href="#"><span>8</span></a>
                                     <div class="circle__menu notification__menu">
@@ -58,7 +58,7 @@
 
                                     </div>
                                 </div>
-                                <div class="message__box">
+                                <div class="message__box header__btn-login--off">
                                     <a class="message header__circle active icon-envelope-o" href="#"><span>5</span></a>
                                     <div class="circle__menu message__menu">
                                         <a href="#" class="circle__item icon-envelope-o icons-color">
@@ -121,7 +121,7 @@
                                 </div>
 
                                 <div class="user__box">
-                                    <a class="user" href="#">
+                                    <a class="user header__btn-login--off" href="#">
                                         <div class="user__inner">
                                             <div class="user__images">
                                                 <img src="images/content/user-login.png" alt="">
@@ -145,16 +145,22 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
-                                <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
-                                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
+                                <a class="header__btn header__btn-login " href="#">Login</a>
+                                <a class="header__btn header__btn-logout header__btn-login--off" href="#">Logout</a>
+                                <a class="header__btn header__btn-register " href="#">Register</a>
                             </div>
+                            <div class="header__btn-menu icon-user"></div>
                         </div>
                     </div>
                 </div>
                 <div class="header__menu">
                     <div class="container">
                         <nav class="menu">
+                            <div class="menu__btn">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
                             <ul class="menu__list">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
@@ -1075,12 +1081,11 @@
                 </div>
             </section>
         </div>
-
         <footer class="footer">
             <div class="footer__content">
                 <div class="container">
                     <div class="footer__inner">
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-adress">
                             <div class="footer__col-title">About Company</div>
                             <div class="footer__col-text">
                                 Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce
@@ -1115,7 +1120,7 @@
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-social">
                             <div class="footer__col-title">Follow Us On</div>
                             <div class="footer__social-link">
                                 <li><a class="link-facebook" href="#"></a></li>
