--- a/app/profile.html
+++ b/app/profile.html
@@ -245,7 +245,7 @@
                         </div>
                         <div class="profile__content">
                             <div class="profile__banner">
-                                <div class="profile__banner-images" style="background: url(images/content/banner.jpg);">
+                                <div class="profile__banner-images" style="background-image: url(images/content/banner.jpg);">
                                 </div>
                             </div>
                             <div class="profile__items">
