--- a/app/product-one.html
+++ b/app/product-one.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Moderno</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
@@ -212,7 +212,7 @@
                     <div class="product-one__inner">
                         <div class="product-one__content">
                             <div class="product-one__images-inner">
-                                <div class="product-one__images" style="background: url(images/content/details.jpg);">
+                                <div class="product-one__images" style="background-image: url(images/content/details.jpg);">
                                 </div>
                             </div>
                             <div class="product-one__title">
